--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -248,23 +248,25 @@ a {
     padding-top: 100px;
 }
 
-.about-section {
+
+
+.about-section(@bg-image) {
     width: 100%;
     padding-top: 50px;
     padding-bottom: 100px;
     color: @light;
     background: 
         -webkit-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(0,0,0,0.5) 20%, rgba(0,0,0,0.5) 80%, rgba(0,0,0,1) 100%) 0 0 no-repeat, 
-        url(../img/about-bg.JPG) 10px 10px no-repeat; 
+        url(@bg-image) 10px 10px no-repeat; 
     background: 
         -o-linear-gradient(bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,0.5) 20%, rgba(0,0,0,0.5) 80%, rgba(0,0,0,1) 100%) 0 0 no-repeat, 
-        url(../img/about-bg.JPG) 10px 10px no-repeat; 
+        url(@bg-image) 10px 10px no-repeat; 
     background: 
         -moz-linear-gradient(bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,0.5) 20%, rgba(0,0,0,0.5) 80%, rgba(0,0,0,1) 100%) 0 0 no-repeat, 
-        url(../img/about-bg.JPG) 10px 10px no-repeat; 
+        url(@bg-image) 10px 10px no-repeat; 
     background: 
         linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(0,0,0,0.5) 20%, rgba(0,0,0,0.5) 80%, rgba(0,0,0,1) 100%) 0 0 no-repeat, 
-        url(../img/about-bg.JPG) 10px 10px no-repeat; 
+        url(@bg-image) 10px 10px no-repeat; 
     background-color: @dark;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -274,6 +276,18 @@ a {
         font-size: 1.0em;
         // text-shadow: 2px 2px #808080;
     }
+}
+
+.vd-about-section {
+    .about-section('../img/about-bg.JPG');
+}
+
+.cubesat-about-section {
+    .about-section('../img/world-map.jpg');
+}
+
+.eco-about-section {
+    .about-section('../img/kensington.jpg');
 }
 
 .contact-section {
