--- a/js/templates/committee.handlebars
+++ b/js/templates/committee.handlebars
@@ -18,7 +18,7 @@
                     <!-- <h4>{{name}}<br>{{title}}</h4> -->
                     <h3 style="margin-bottom: 5px">{{name}}</h3>
                     <h4 style="margin-bottom: 15px">{{title}}</h4>
-                    <p>{{bio}}</p>
+                    <p>{{{bio}}}</p>
                 </div>
             </div> 
             {{/each}}
