--- a/less/variables.less
+++ b/less/variables.less
@@ -1,9 +1,17 @@
 // Variables
 
+@gray-base:              #000;
+@gray-darker:            lighten(@gray-base, 13.5%); // #222
+@gray-dark:              lighten(@gray-base, 20%);   // #333
+@gray:                   lighten(@gray-base, 33.5%); // #555
+@gray-light:             lighten(@gray-base, 46.7%); // #777
+@gray-lighter:           lighten(@gray-base, 93.5%); // #eee
+
 @vd-pink: #9C003E;
 // @primary: #219AB3;
 @primary: @vd-pink;
 @dark: #000;
+// @dark: @gray-darker;
 @light: #fff;
 // @navbar-highlight: fade(@primary, 30%);
 @navbar-highlight: fade(@primary, 50%);
